--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
           </div>
           
           <div class="text">
-            <h3 id="letter-spacing">PERFUME</h3>
+            <h3 id="letter-spacing" class="Montserrat500">PERFUME</h3>
 
-            <h1>Gabrielle Essence Eau De Parfum</h1>
+            <h1 class="Fraunces">Gabrielle Essence Eau De Parfum</h1>
 
-            <h3>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-            Perfumer-Creator for the House of CHANEL.</h3>
+            <h3 class="Montserrat500">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</h3>
             
             <div class="row">
-              <h1>$149.99</h1>
-              <s id="crossed-price">$169.99</s>
+              <h1 class="greenFraunces">$149.99</h1>
+              <s id="crossed-price" class="Montserrat500">$169.99</s>
             </div>
 
             <div class="button">
               <img src="./images/icon-cart.svg" alt="cart" id="icon-img">
-              <h2>Add to Cart</h2>
+              <p class="Montserrat700">Add to Cart</p>
             </div>
           </div>
 
